# reinteract

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  epydoc.conf
data/: Info.plist  Makefile.am  Reinteract.icns  reinteract.desktop  reinteract.xml
data/MainMenu.nib/: classes.nib  info.nib  keyedobjects.nib
dialogs/: Makefile.am  new-notebook.glade  new-notebook.xml  notebook-properties.glade  notebook-properties.xml  open-notebook.glade  open-notebook.xml  preferences.glade  preferences.xml  save-file.glade  save-file.xml
examples/: basics.pyw  imshow.rws  index.rnb  play.rws  plot.pyw  plot2.rws
lib/: relatex.py  remathml.py  replay.py  replot.py  resympy.py
lib/reinteract/: ShellBuffer.py  ShellView.py  Statement.py  about_dialog.py  application.py  application_state.py  base_notebook_window.py  base_window.py  change_range.py  chunks.py  completion_popup.py  config_file.py  custom_result.py  data_format.py  doc_format.py  doc_popup.py  editor.py  editor_window.py  file_list.py  format_escaped.py  global_settings.py  iter_copy_from.py  library_editor.py  main.py  main_menu.py  mini_window.py  new_notebook.py  notebook.py  notebook_info.py  notebook_window.py  open_notebook.py  popup.py  preferences_dialog.py  print_operation.py  recorded_object.py  retokenize.py  reunicode.py  rewrite.py  sanitize_textview_ipc.py  save_file.py  (+13 more)
po/: POTFILES.in  en_CA.po
src/reinteract_wrapper_osx/: MenuController.h  MenuController.m  README  ThunkPython.c  ThunkPython.h  main.m  pyNativeMainMenu.h  pyNativeMainMenu.m
tools/: compiledir.py  run_tests.sh
tools/build_bundle/: README  build_bundle.py  build_bundle.sh  reinteract.dsstore
tools/build_deps_osx/: Python-2.5.2-framework-arch-only.patch  Python-2.5.2-framework-arch.patch  README  build.sh  gdk-quartz-eventloop-rework-20080905.patch  gdk-window-process-updates-hook.patch  gtk-clipboard-quartz-new0.patch  gtk-dont-steal-update-region.patch  i386.cache  jhbuildrc-reinteract  pango-relocate.patch  ppc.cache  pycairo-unknown-surface-types.patch  reinteract-bootstrap.modules  reinteract.modules
tools/build_msi/: BrowsePage.wxs  BrowsePage2.wxs  CancelPage.wxs  FatalErrorPage.wxs  FeaturesPage.wxs  Overrides.wxl  ProgressPage.wxs  README  ReinteractUI.wxs  SuccessPage.wxs  WelcomePage.wxs  build_msi.py  wrapper.c
tools/common/: am_parser.py  builder.py  utils.py
