AC_INIT(reinteract, 0.0.1)

AM_INIT_AUTOMAKE([dist-bzip2 dist-zip])
AM_MAINTAINER_MODE
AM_PATH_PYTHON(2.4)
IT_PROG_INTLTOOL

GETTEXT_PACKAGE=$PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AM_GLIB_GNU_GETTEXT

REINTERACT_PACKAGE_DIR=${pythondir}/$PACKAGE_NAME
AC_SUBST(REINTERACT_PACKAGE_DIR)

AC_OUTPUT([ 
  Makefile
  po/Makefile.in
])
