icondir = $(datadir)/icons/hicolor/scalable/apps
icon_DATA = reinteract.svg

desktopdir = $(datadir)/applications
desktop_DATA = reinteract.desktop

EXTRA_DIST=					\
	$(desktop_DATA)				\
	$(icon_DATA)				\
	Info.plist				\
	MainMenu.nib/classes.nib		\
	MainMenu.nib/info.nib			\
	MainMenu.nib/keyedobjects.nib		\
	Reinteract.ico				\
	Reinteract.icns
